# JunichiSugiura

./: .gitignore  .gitmodules  Cargo.toml  README.md  Untitled.md
.obsidian/: app.json  appearance.json  daily-notes.json  workspace.json
blog/: frontend-for-the-next-10-years.md  今後10年のフロントエンドを考えた続けた１年.md
bundle/: README.md
bundle/dotfiles/cli/scripts/: dotfiles
bundle/dotfiles/git/: .gitconfig
bundle/dotfiles/keybindings/.config/karabiner/: assets  automatic_backups
bundle/dotfiles/runtime/: .tool-versions
bundle/dotfiles/terminal/: .profile  .tmux.conf  .zshrc
bundle/dotfiles/terminal/.config/alacritty/: alacritty.toml
bundle/dotfiles/wm/.config/yabai/: yabairc
bundle/homebrew/: Brewfile  Brewfile.lock.json
bundle/scripts/: post.sh  pre.sh
bundles/homebrew/: Brewfile.lock.json
cookbook/: Carbonara.md  Quiche Lorraine.md
docs/handbook/: README.md
docs/handbook/.obsidian/: app.json  community-plugins.json  daily-notes.json
docs/handbook/Daily/: 2022-10-30.md
handbook/.obsidian/: app.json  appearance.json  workspace.json
plugins/homebrew/: Brewfile.lock.json
src/: bundle.rs  lib.rs  main.rs  plugin.rs  resource.rs
src/bundle/: cli.rs  config.rs
src/bundle/tool/: homebrew.rs
src/plugin/: cli.rs  config.rs  event.rs  handler.rs  homebrew.rs  tool.rs
src/plugin/handler/: dotfiles.rs
src/plugin/tool/: homebrew.rs
src/resource/: path.rs
