[package]
name = "dotfiles"
version = "0.0.1"
edition = "2021" 
publish = false


[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
dip = "0.1"
dirs = "4.0"
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }

[patch.crates-io]
# dip = { git = "https://github.com/diptools/dip", branch = "main" }
dip = { path = "../../diptools/dip" }

[features]
default = ["full"]
full = ["brew"]
brew = []
