[package]
name = "dip_bundle"
version = "0.0.1"
edition = "2021" 
publish = false


[[bin]]
name = "dip_bundle"
path = "src/main.rs"

[dependencies]
dip = "0.1"
dirs = "4"
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
cmd_lib = "1"

[patch.crates-io]
# dip = { git = "https://github.com/diptools/dip", branch = "main" }
dip = { path = "../../diptools/dip" }

[features]
default = ["full"]
full = ["brew"]
brew = []
